[3703] Updating spacing issues

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -6829,7 +6829,7 @@ a:hover .mozilla-badge {
 }
 
 .verify-email-box {
-    height: 80px;
+    min-height: 80px;
 }
 
 .revoke-social .form-social-sign-in #ajax-loader {
